# nn_zero_to_hero

./: README.md  pyproject.toml
src/makemore_mlp/: dataset.py  mlp.ipynb  model.py
src/makemore_ngram/: bigram_model.ipynb  trigram_model.ipynb
src/makemore_ngram/bigram_model/: dataset.py  model.py
src/makemore_ngram/trigram_model/: dataset.py  model.py
src/micrograd/: fourier_series.ipynb  fourier_series_using_mg.ipynb  micrograd.py  mlp.ipynb  mlp_using_mg.ipynb  sample_dataset.json  test.ipynb
src/micrograd/utils/: draw_graph.py  engine.py  gradient_descent.py  mlp.py
tests/: test_main.py
