[project]
name = "nn-zero-to-hero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pytest>=8.4.1",
    "torch>=2.7.1",
]

[tool.pytest.ini_options]
pythonpath = "src"
